// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`views with thread gating applies gate after root post is deleted. 1`] = `undefined`;

exports[`views with thread gating applies gate for empty rules. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating applies gate for follower rule. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [
      {
        "$type": "app.bsky.feed.threadgate#followerRule",
      },
    ],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating applies gate for following rule. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [
      {
        "$type": "app.bsky.feed.threadgate#followingRule",
      },
    ],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating applies gate for list rule. 1`] = `
{
  "cid": "cids(0)",
  "lists": [
    {
      "cid": "cids(1)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 1,
      "name": "list a",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(2)",
      "viewer": {
        "muted": false,
      },
    },
    {
      "cid": "cids(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 1,
      "name": "list b",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(3)",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [
      {
        "$type": "app.bsky.feed.threadgate#listRule",
        "list": "record(2)",
      },
      {
        "$type": "app.bsky.feed.threadgate#listRule",
        "list": "record(3)",
      },
    ],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating applies gate for mention rule. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [
      {
        "$type": "app.bsky.feed.threadgate#mentionRule",
      },
    ],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating applies gate for missing rules, takes no action. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating applies gate for multiple rules. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [
      {
        "$type": "app.bsky.feed.threadgate#mentionRule",
      },
      {
        "$type": "app.bsky.feed.threadgate#followerRule",
      },
      {
        "$type": "app.bsky.feed.threadgate#followingRule",
      },
    ],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating applies gate for unknown list rule. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [
      {
        "$type": "app.bsky.feed.threadgate#listRule",
        "list": "record(1)",
      },
    ],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;

exports[`views with thread gating does not apply gate to original poster. 1`] = `
{
  "cid": "cids(0)",
  "lists": [],
  "record": {
    "$type": "app.bsky.feed.threadgate",
    "allow": [],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "post": "record(1)",
  },
  "uri": "record(0)",
}
`;
